--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://backside360.github.io/sschool1",
+  "homepage": "https://backside360.github.io/SnowboardSchoolApp",
   "name": "snowboard-app",
   "version": "0.1.0",
   "private": true,
